Fixed the issue that image toolbar is hidden behind large image in preview mode

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -19,3 +19,7 @@
     padding: .5em;
 }
 
+.p-image-action.p-link {
+    z-index: 9999;
+}
+
